[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/ch/boss/yuehan/17.png" type="Texture" id=1]
[ext_resource path="res://object/Boss/Yuehan.gd" type="Script" id=2]
[ext_resource path="res://assets/ch/boss/yuehan/yue1.png" type="Texture" id=3]
[ext_resource path="res://assets/ch/boss/yuehan/zhuazi.png" type="Texture" id=4]
[ext_resource path="res://resource/YuehanBall.tres" type="Texture" id=5]
[ext_resource path="res://object/Boss/Plane.gd" type="Script" id=6]
[ext_resource path="res://object/Boss/Plane/ball.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 184, 203 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 184, 0, 184, 203 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 368, 0, 184, 203 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 552, 0, 184, 203 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 736, 0, 184, 203 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 203, 184, 203 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 184, 203, 184, 203 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 368, 203, 184, 203 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 552, 203, 184, 203 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 736, 203, 184, 203 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 136, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 136, 80 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 137, 0, 137, 80 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 137, 80 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 137, 80, 137, 80 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": false,
"name": "open",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 81, 384, 27, 32 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=37]
radius = 9.0

[sub_resource type="CircleShape2D" id=36]
radius = 12.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 91.5, 104 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 63, 66 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 63, 66 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 63, 0, 63, 66 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 126, 0, 63, 66 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 189, 0, 63, 66 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 252, 0, 63, 66 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 315, 0, 63, 66 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 378, 0, 63, 66 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "shoot",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 21.7035, 386.925, 29.0592, 119.031 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 310, 67, 62, 67 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 355, 69, 71, 69 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 30 ) ],
"loop": true,
"name": "attack",
"speed": 2.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 848, 126 )
script = ExtResource( 2 )

[node name="head" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 7
playing = true

[node name="hand" type="AnimatedSprite" parent="."]
position = Vector2( 5, 116 )
frames = SubResource( 15 )
animation = "open"

[node name="KinematicBody2D" type="KinematicBody2D" parent="hand"]
script = ExtResource( 6 )

[node name="Plane" type="AnimatedSprite" parent="hand/KinematicBody2D"]
position = Vector2( -48, -23 )
frames = SubResource( 34 )
animation = "attack"

[node name="ball" type="KinematicBody2D" parent="hand/KinematicBody2D/Plane"]
position = Vector2( -1, 6 )
script = ExtResource( 7 )

[node name="sprite" type="Sprite" parent="hand/KinematicBody2D/Plane/ball"]
position = Vector2( 3, 17 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hand/KinematicBody2D/Plane/ball"]
position = Vector2( 3, 17 )
shape = SubResource( 37 )

[node name="Timer" type="Timer" parent="hand/KinematicBody2D/Plane"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="hand/KinematicBody2D"]
position = Vector2( -47, -24 )
shape = SubResource( 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.5, -1 )
shape = SubResource( 12 )
disabled = true

[node name="zhuazi" type="AnimatedSprite" parent="."]
position = Vector2( -783.5, -69 )
frames = SubResource( 19 )
playing = true

[node name="Tween" type="Tween" parent="zhuazi"]

[node name="GouziLine" type="Sprite" parent="."]
position = Vector2( -784.5, 10 )
texture = SubResource( 29 )

[node name="Gouzi" type="AnimatedSprite" parent="."]
position = Vector2( -778.5, -14 )
frames = SubResource( 27 )
animation = "attack"

[node name="GouziTween" type="Tween" parent="Gouzi"]

[node name="GouziTimer" type="Timer" parent="Gouzi"]
wait_time = 1.5
one_shot = true

[connection signal="animation_finished" from="hand" to="." method="_on_hand_animation_finished"]
[connection signal="timeout" from="hand/KinematicBody2D/Plane/Timer" to="hand/KinematicBody2D" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="zhuazi" to="." method="_on_zhuazi_animation_finished"]
[connection signal="tween_all_completed" from="Gouzi/GouziTween" to="." method="_on_GouziTween_tween_all_completed"]
[connection signal="timeout" from="Gouzi/GouziTimer" to="." method="_on_GouziTimer_timeout"]
